--- a/source/static/css/category.css
+++ b/source/static/css/category.css
@@ -1,3 +1,7 @@
+body{
+	background-color: rgb(228, 251, 252);
+}
+
 #categorybox {
     display: flex;
     width: 100%;
@@ -11,11 +15,22 @@
 }
 
 #categorybox .container .text-center {
+    font-size: large;
+    color: rgb(0, 0, 0);
     border-radius: 50px;
-    border: 20px solid white;
+    border: 20px solid rgb(228, 251, 252);
     border-collapse: collapse;
-    background-color: #96D4D4;
-    width: 270px;
-    height: 180px;
+    background-color: #5bd3d3;
+    width: 360px;
+    height: 220px;
     text-decoration:none;
+}
+
+#categorybox .container .text-center:hover{
+	z-index: 9999;
+	transform: scale(1.1);
+	background: #5bd3d3;
+	cursor: pointer;
+	transition: all 0.3s;
+	color: white;
 }
