--- a/source/templates/main.html
+++ b/source/templates/main.html
@@ -1,14 +1,14 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
 
-{% block head %} 
+{% block head %}
 <!-- main.js file -->
 <script type="text/javascript" src="{{ url_for('static', filename='/js/main.js') }}"></script>
 <link rel="stylesheet" href="/static/css/main.css"/>
 {% endblock %}
 
-{% block title %}Main page{% endblock %} 
+{% block title %}Main page{% endblock %}
 {% block content %}
-	
+
 		<div class="container" id="text">
 			<div class="text-center">
 				<div class="text-3d">KNOWITALL</div>
@@ -21,9 +21,9 @@
 			<div class="text-center">
 				<a href='/category' id="startgame" style="width: 550px; height: 300px; left: 400px; top: 140px; display: flex; justify-content: center; align-items: center; font-size: 2.8em; text-decoration:none;">START</a>
 				<a href='/leaderboard' id="leaderboard" style="width: 320px; height: 180px; left: 70px; top: 140px; text-decoration:none;">LeaderBoard</a>
-
+				{% if user.is_authenticated %}
 				<a href='/playerProfile' id="playerpofile" style="width: 350px; height: 200px; left: 960px; top: 240px; text-decoration:none;">Player Profie</a>
-
+				{% endif %}
 				<a style="width: 300px; height: 150px; left: 290px; top: 450px; text-decoration:none; background-color: grey;">About</a>
 			</div>
 		</div>
